--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,16 @@
 {
-  "name": "Python Azure SQL Dev",
-  "image": "mcr.microsoft.com/devcontainers/python:3.12",
-  "features": {
-    "ghcr.io/devcontainers/features/azure-cli:1": {}
+  "name": "RealRoll Flask + Azure SQL",
+  "build": {
+    "dockerfile": "Dockerfile",
+    "context": ".."
   },
-  "postCreateCommand": "sudo apt-get update && sudo apt-get install -y unixodbc-dev msodbcsql18 gcc g++ python3-dev",
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "ms-python.python",
-        "ms-python.vscode-pylance"
-      ]
-    }
+  "settings": {
+    "terminal.integrated.shell.linux": "/bin/bash"
   },
-  "remoteUser": "vscode"
+  "extensions": [
+    "ms-python.python",
+    "ms-azuretools.vscode-docker"
+  ],
+  "forwardPorts": [5006],
+  "postCreateCommand": "echo 'Devcontainer setup complete'"
 }
